--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Rahull14.github.io/Netflix_project",
   "name": "netflix2.0",
   "version": "0.1.0",
   "private": true,
@@ -9,12 +10,17 @@
     "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react-youtube": "^7.13.1",
     "web-vitals": "^1.1.2"
   },
+  "devDependencies": {
+    "gh-pages": "^4.0.0",
+    "react-scripts": "^5.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
